[tool.poetry]
name = "good-practices"
version = "0.1.0"
description = ""
authors = ["Marsag2023 <m.aygistov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.1"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
